<resources>
    <!--
  ~
  ~ @brief Copyright (c) 2023 Gabriel Marquette
  ~
  ~ Copyright (c) 2023 Gabriel Marquette. All rights reserved.
  ~
  -->

    <!-- App name -->
    <string name="app_name" translatable="false">GuessWho One Piece</string>

    <!-- Left Column -->
    <string name="guess_who" translatable="false">Guess Who ?</string>
    <string name="play">Play</string>
    <string name="hard">Hard</string>
    <string name="logo_app">Logo</string>
    <string name="easy">Easy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="guess_1">Guess 1</string>
    <string name="guess_2">Guess 2</string>
    <string name="guess_3">Guess 3</string>
    <string name="guess_4">Guess 4</string>
    <string name="guess_5">Guess 5</string>
    <string name="guess_6">Guess 6</string>
    <string name="make_your_guess">Make your guess</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_want_to_play_again">Do you want to play again ?</string>
    <string name="the_answer_was">The answer was :</string>
    <string name="MaxProgressBar" translatable="false">100 %</string>
    <string name="default_difficulty">EASY</string>
    <string name="difficulty">"Difficulty : "</string>
    <string name="age">Âge :</string>
    <string name="type">Type :</string>
    <string name="prime">Prime :</string>
    <string name="chapitre">Chapitre :</string>
    <string name="fruit">Fruit :</string>
    <string name="statut">Statut :</string>
    <string name="equipage">Equipage :</string>
    <string name="niveau">Niveau :</string>
    <string name="import_datas">Import Datas</string>
    <string name="wins">Wins :</string>
    <string name="loses">Loses :</string>
    <string name="last_update">Last Update :</string>

    <!-- String for Help Menu -->
    <string name="fruitHelp">Ces images permettent de déterminer si le personnage cherché possède un fruit ou non. Dans le cas, où il n\'en possède pas, ce sera le fruit avec la croix rouge, dans le cas où il a mangé un fruit du démon, ce sera l\'image du fruit du démon classique. </string>
    <string name="bountyHelp">Ce cercle permet de déterminer la prime du personnage. La prime va être déterminé par rapport a celle du personnage choisis. Il va être affiché la prime du personnage donnée avec une indication par rapport à celui à trouver. Il existe plusieurs types de primes, celles accompagnés de "Md" sont exprimées en milliards de berrys, celles "Mi" en millions de berrys, sinon il s\'agit de la prime en berrys. Celle étant inconnues sont affichés en tant que "Unknown" et les citoyens et marines ont des primes équivalentes à 0. \n
    Exemple : Personnage à trouver Monkey D. Luffy : 3 Md, Personnage choisi : Tony-Tony Chopper : 500. Dans ce cas la, l\'image va afficher 500, par rapport a la prime de Tony-Tony Chopper ainsi qu\'une flèche vers le haut pour dire que celle cherchée est supérieure.</string>
    <string name="ChapterHelp"> Le troisième cercle est le chapitre où le personnage est apparu pour la première fois. De la même façon que pour la prime, le chapitre est accompagné d\'une flèche permettant de savoir si ce dernier est apparu avant ou après le personnage recherché.</string>
    <string name="TypeHelp">Ce cercle permet de déterminer le type du personnage, il existe 4 types :\n
    - Pirate : représenté par le symbole de l\'équipage au chapeau de paille. Il représente tous le spirates, brigands du monde de "One Piece".\n
    - Marine : Représenté par le symbole de la marine. Le symbole de la marine est utilisé pour les personnages de la marine, les dragons celestes, les personnages liés à la prison sous-marine Impel Down ainsi que pour le Gouvernement Mondial.\n
    - Révolutionnaire : Représenté par le symbole de l\'armée révolutionnaire. Il représente tous les membres de l\'armée révolutionnaire.\n
    - Citoyen : Représenté par le symbole présent sur le logo "One Piece". Il représente tous les citoyens du monde de "One Piece".</string>
    <string name="AliveHelp">Ces images permettent de savoir si le personnage est actuellement en vie ou non. La premiere image représente lorsque le personnage est en vie et l\'autre quand il est décédé.  </string>
    <string name="AgeHelp">Ce cercle représente l\'âge des personnages. De la même façon que pour le chapitre d\'apparition, des flèches indiquent si le personnage est plus agé ou non que celui choisi.  </string>
    <string name="CrewHelp"> Ces images représentent les différents équipages. La première image est l\'équipage des pirates au chapeaux de pailles. La seconde est celle des pirates sans équipage à part entière. La dernière est celle des citoyens. Pour la marine, le Gouvernement Mondial, Impel Down, possède son propre équipage et son donc son propre logo. </string>
    <string name="WRHelp">Ces cercles permettent de déterminer si la réponse est correcte par rapport au personnage recherché. Si le cercle est vert, alors le personnage cherché possède les mêmes caractéristique que le personnage choisi sur cet aspect la.\n
    Exemple : Roronoa Zoro : Pas de fruit du démon, Vinsmoke Sanji : Pas de fruit du démon. Dans ce cas, si le personnage recherché est Roronoa Zoro, alors la caractéristique "Fruit du démon" sera en vert car les deux personnages n\'en ont pas mangé.</string>
    <string name="informations">Informations</string>

</resources>