<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/guess_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/startCharacterName"
            android:gravity="center"
            android:text="@string/guess_1"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/guess_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/startCharacterName"
            android:gravity="center"
            android:text="@string/guess_2"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/guess_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/startCharacterName"
            android:gravity="center"
            android:text="@string/guess_3"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/guess_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/startCharacterName"
            android:gravity="center"
            android:text="@string/guess_4"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck,TextSizeCheck" />

        <TextView
            android:id="@+id/guess_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/startCharacterName"
            android:gravity="center"
            android:text="@string/guess_5"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/guess_6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/startCharacterName"
            android:gravity="center"
            android:text="@string/guess_6"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>


</merge>